// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When fetching multiple resources GET /bibliographicReferences when all of the resources are published should fetch multiple resources of type bibliographicReference 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "This is the abstract, NOT a general note!",
          "creators": Array [
            Object {
              "name": "Alana Duvernay",
              "type": "author",
            },
          ],
          "isbn": "978-1-895811-34-6",
          "numberOfPages": 455,
          "place": "Kennebunk Port, Maine",
          "publisher": "Atlantic Publishing",
          "title": "A Day in the Life",
          "type": "book",
          "url": "https://atlanticpublishing.com",
          "year": 1999,
        },
        "id": "1",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "x, p. [443]-813. illus. pl. 13-14 35 cm.",
          "creators": Array [
            Object {
              "name": "James Alexander Teit",
              "type": "author",
            },
          ],
          "title": "The Shuswap. Memoirs of the AMNH ; v. 4, pt. 7; Publications of the Jesup North Pacific Expedition ; v. 2, pt. 7.",
          "type": "book",
          "url": "https://digitallibrary.amnh.org/handle/2246/38",
          "year": 1909,
        },
        "id": "2",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "creators": Array [
            Object {
              "name": "William J. Turkel",
              "type": "author",
            },
          ],
          "isbn": "978-0-7748-1376-1",
          "numberOfPages": 322,
          "place": "Vancouver",
          "publisher": "UBC Press",
          "title": "The archive of place: unearthing the pasts of the Chilcotin Plateau",
          "type": "book",
          "url": "https://vpl.bibliocommons.com/v2/record/S38C1549002",
          "year": 2007,
        },
        "id": "3",
        "tags": Array [
          Object {
            "id": "6",
            "label": "law",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "An analysis of the Cariboo Chilcotin Justice inquiry.",
          "creators": Array [
            Object {
              "name": "Sigurd Purcell",
              "type": "author",
            },
          ],
          "doi": "10.14288/bcs.v0i19.784",
          "issn": "00052949",
          "issueDate": "Spring 2013",
          "pages": "109-113,115-136,240",
          "publicationTitle": "Journal of History",
          "title": "Report on the Cariboo Chilcotin Justice inquiry",
          "type": "journalArticle",
          "url": "https://search.proquest.com/docview/1682229477/abstract/7836BCEA06014582PQ/1",
        },
        "id": "23",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "Drawing on Ken Martin and Mike Robinson's 1972 surveys of pre-contact sites and on a broad reading of secondary literature, including the work of Diamond Jenness, Adrien-Gabriel Morice, and G.R. Willey, Condrashoff argues that pit houses and salmon storage pits on Bowron Lake and at the headwaters of the Bowron River indicate \\"considerable use of the area\\" and yearround occupation rather than simply seasonal use for salmon fishing.13 Projectile points found near the storage pits appear to show attributes of the Kamloops Phase, dated approximately 1250 to 1800 CE, which suggests occupation of the site during the contact period and fur trade era and its possible abandonment shortly before or during the gold rush.",
          "creators": Array [
            Object {
              "name": "Mica Jorgenson",
              "type": "author",
            },
          ],
          "issn": "00052949",
          "issueDate": "Spring 2015",
          "pages": "109-113,115-136,240",
          "publicationTitle": "BC Studies",
          "title": "\\"INTO THAT COUNTRY TO WORK\\": Aboriginal Economic Activities during Barkerville's Gold Rush *",
          "type": "journalArticle",
          "url": "https://search.proquest.com/docview/1682229477/abstract/7836BCEA06014582PQ/1",
        },
        "id": "24",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "[...]of the Opium Wars, Chinese use of opium became widespread, and opium became an integral (and increasingly strong) thread in the \\"web of empire.\\" [...]of the gold rushes, Chinese migrants informed the cultures of the trans-Pacific world.",
          "creators": Array [
            Object {
              "name": "Tzu-I. Chung",
              "type": "author",
            },
          ],
          "issn": "00052949",
          "pages": "137-151,153-154,157-158,160,239",
          "publicationTitle": "BC Studies",
          "title": "KWONG LEE & COMPANY AND EARLY TRANS-PACIFIC TRADE: From Canton, Hong Kong, to Victoria and Barkerville",
          "type": "journalArticle",
          "url": "https://search.proquest.com/docview/1682229425/abstract/CD9031FDCDF4B48PQ/1",
        },
        "id": "25",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "William, June
- Nemiah Valley
- Qualifying as an expert in Tsilhqot'in written language",
          "caseName": "2002-07-08_Tsilhqot'inTitleCase",
          "court": "Supreme Court of British Columbia",
          "creators": Array [],
          "dateDecided": "Recorded 2002-07-08",
          "pages": "Pages 1-6",
          "type": "courtCase",
          "url": "https://www.myzoterolink.com/bogus-link-to-doc.php",
        },
        "id": "44",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "William, Eliza
- Affidavit #2",
          "caseName": "2003-07-29_ElizaWilliam_affidavit",
          "court": "Supreme Court of British Columbia",
          "creators": Array [],
          "dateDecided": "Sworn 2003-07-29",
          "pages": "Pages 1 - 73",
          "type": "courtCase",
          "url": "https://mysecurelink.com/another-bogus-link.cfm",
        },
        "id": "45",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "Roger William, on his own behalf, on behalf of all other members of the Xeni Gwet’in First Nations Government and on behalf of all other members of the Tsilhqot’in Nation

Appellant

V.

Her Majesty The Queen in Right of the Province of British Columbia, Regional Manager of the Cariboo Forest Region and Attorney General of Canada Respondents

And

Attorney General of Quebec, Attorney General of Manitoba, Attorney General for Saskatchewan, Attorney General of Alberta, Te’mexw Treaty Association, Business Council of British Columbia, Council of Forest Industries, Coast Forest Products Association, Mining Association of British Columbia, Association for Mineral Exploration British Columbia, Assembly of First Nations, Gitanyow Hereditary Chiefs of Gwass Hlaam, Gamlaxyeltxw, Malii, Gwinuu, Haizimsque, Watakhayetsxw, Luuxhon and Wii’litswx, on their own behalf and on behalf of all Gitanyow, Hul’qumi’num Treaty Group, Council of the Haida Nation, Office of the Wet’suwet’en Chiefs, Indigenous Bar Association in Canada, First Nations Summit, Tsawout First Nation, Tsartlip First Nation, Snuneymuxw First Nation, Kwakiutl First Nation, Coalition of Union of British Columbia Indian Chiefs, Okanagan Nation Alliance, Shuswap Nation Tribal Council and their member communities, Okanagan, Adams Lake, Neskonlith and Splatsin Indian Bands, Amnesty International, Canadian Friends Service Committee, Gitxaala Nation, Chilko Resorts and Community Association and Council of Canadians

Interveners

Indexed as:  Tsilhqot’in Nation v. British Columbia
2014 SCC 44
File No.:  34986.
2013:  November 7; 2014:  June 26.
Present:  McLachlin C.J. and LeBel, Abella, Rothstein, Cromwell, Moldaver, Karakatsanis and Wagner JJ.",
          "caseName": "IN THE SUPREME COURT OF BRITISH COLUMBIA",
          "court": "Supreme Court of British Columbia",
          "creators": Array [],
          "dateDecided": "2007-11-20",
          "type": "courtCase",
          "url": "https://www.bccourts.ca/Jdb-txt/SC/07/17/2007BCSC1700.pdf",
        },
        "id": "46",
        "tags": Array [],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /bibliographicReferences when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "This is the abstract, NOT a general note!",
          "creators": Array [
            Object {
              "name": "Alana Duvernay",
              "type": "author",
            },
          ],
          "isbn": "978-1-895811-34-6",
          "numberOfPages": 455,
          "place": "Kennebunk Port, Maine",
          "publisher": "Atlantic Publishing",
          "title": "A Day in the Life",
          "type": "book",
          "url": "https://atlanticpublishing.com",
          "year": 1999,
        },
        "id": "1",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "x, p. [443]-813. illus. pl. 13-14 35 cm.",
          "creators": Array [
            Object {
              "name": "James Alexander Teit",
              "type": "author",
            },
          ],
          "title": "The Shuswap. Memoirs of the AMNH ; v. 4, pt. 7; Publications of the Jesup North Pacific Expedition ; v. 2, pt. 7.",
          "type": "book",
          "url": "https://digitallibrary.amnh.org/handle/2246/38",
          "year": 1909,
        },
        "id": "2",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "creators": Array [
            Object {
              "name": "William J. Turkel",
              "type": "author",
            },
          ],
          "isbn": "978-0-7748-1376-1",
          "numberOfPages": 322,
          "place": "Vancouver",
          "publisher": "UBC Press",
          "title": "The archive of place: unearthing the pasts of the Chilcotin Plateau",
          "type": "book",
          "url": "https://vpl.bibliocommons.com/v2/record/S38C1549002",
          "year": 2007,
        },
        "id": "3",
        "tags": Array [
          Object {
            "id": "6",
            "label": "law",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "An analysis of the Cariboo Chilcotin Justice inquiry.",
          "creators": Array [
            Object {
              "name": "Sigurd Purcell",
              "type": "author",
            },
          ],
          "doi": "10.14288/bcs.v0i19.784",
          "issn": "00052949",
          "issueDate": "Spring 2013",
          "pages": "109-113,115-136,240",
          "publicationTitle": "Journal of History",
          "title": "Report on the Cariboo Chilcotin Justice inquiry",
          "type": "journalArticle",
          "url": "https://search.proquest.com/docview/1682229477/abstract/7836BCEA06014582PQ/1",
        },
        "id": "23",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "Drawing on Ken Martin and Mike Robinson's 1972 surveys of pre-contact sites and on a broad reading of secondary literature, including the work of Diamond Jenness, Adrien-Gabriel Morice, and G.R. Willey, Condrashoff argues that pit houses and salmon storage pits on Bowron Lake and at the headwaters of the Bowron River indicate \\"considerable use of the area\\" and yearround occupation rather than simply seasonal use for salmon fishing.13 Projectile points found near the storage pits appear to show attributes of the Kamloops Phase, dated approximately 1250 to 1800 CE, which suggests occupation of the site during the contact period and fur trade era and its possible abandonment shortly before or during the gold rush.",
          "creators": Array [
            Object {
              "name": "Mica Jorgenson",
              "type": "author",
            },
          ],
          "issn": "00052949",
          "issueDate": "Spring 2015",
          "pages": "109-113,115-136,240",
          "publicationTitle": "BC Studies",
          "title": "\\"INTO THAT COUNTRY TO WORK\\": Aboriginal Economic Activities during Barkerville's Gold Rush *",
          "type": "journalArticle",
          "url": "https://search.proquest.com/docview/1682229477/abstract/7836BCEA06014582PQ/1",
        },
        "id": "24",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "[...]of the Opium Wars, Chinese use of opium became widespread, and opium became an integral (and increasingly strong) thread in the \\"web of empire.\\" [...]of the gold rushes, Chinese migrants informed the cultures of the trans-Pacific world.",
          "creators": Array [
            Object {
              "name": "Tzu-I. Chung",
              "type": "author",
            },
          ],
          "issn": "00052949",
          "pages": "137-151,153-154,157-158,160,239",
          "publicationTitle": "BC Studies",
          "title": "KWONG LEE & COMPANY AND EARLY TRANS-PACIFIC TRADE: From Canton, Hong Kong, to Victoria and Barkerville",
          "type": "journalArticle",
          "url": "https://search.proquest.com/docview/1682229425/abstract/CD9031FDCDF4B48PQ/1",
        },
        "id": "25",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "William, June
- Nemiah Valley
- Qualifying as an expert in Tsilhqot'in written language",
          "caseName": "2002-07-08_Tsilhqot'inTitleCase",
          "court": "Supreme Court of British Columbia",
          "creators": Array [],
          "dateDecided": "Recorded 2002-07-08",
          "pages": "Pages 1-6",
          "type": "courtCase",
          "url": "https://www.myzoterolink.com/bogus-link-to-doc.php",
        },
        "id": "44",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "William, Eliza
- Affidavit #2",
          "caseName": "2003-07-29_ElizaWilliam_affidavit",
          "court": "Supreme Court of British Columbia",
          "creators": Array [],
          "dateDecided": "Sworn 2003-07-29",
          "pages": "Pages 1 - 73",
          "type": "courtCase",
          "url": "https://mysecurelink.com/another-bogus-link.cfm",
        },
        "id": "45",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "data": Object {
          "abstract": "Roger William, on his own behalf, on behalf of all other members of the Xeni Gwet’in First Nations Government and on behalf of all other members of the Tsilhqot’in Nation

Appellant

V.

Her Majesty The Queen in Right of the Province of British Columbia, Regional Manager of the Cariboo Forest Region and Attorney General of Canada Respondents

And

Attorney General of Quebec, Attorney General of Manitoba, Attorney General for Saskatchewan, Attorney General of Alberta, Te’mexw Treaty Association, Business Council of British Columbia, Council of Forest Industries, Coast Forest Products Association, Mining Association of British Columbia, Association for Mineral Exploration British Columbia, Assembly of First Nations, Gitanyow Hereditary Chiefs of Gwass Hlaam, Gamlaxyeltxw, Malii, Gwinuu, Haizimsque, Watakhayetsxw, Luuxhon and Wii’litswx, on their own behalf and on behalf of all Gitanyow, Hul’qumi’num Treaty Group, Council of the Haida Nation, Office of the Wet’suwet’en Chiefs, Indigenous Bar Association in Canada, First Nations Summit, Tsawout First Nation, Tsartlip First Nation, Snuneymuxw First Nation, Kwakiutl First Nation, Coalition of Union of British Columbia Indian Chiefs, Okanagan Nation Alliance, Shuswap Nation Tribal Council and their member communities, Okanagan, Adams Lake, Neskonlith and Splatsin Indian Bands, Amnesty International, Canadian Friends Service Committee, Gitxaala Nation, Chilko Resorts and Community Association and Council of Canadians

Interveners

Indexed as:  Tsilhqot’in Nation v. British Columbia
2014 SCC 44
File No.:  34986.
2013:  November 7; 2014:  June 26.
Present:  McLachlin C.J. and LeBel, Abella, Rothstein, Cromwell, Moldaver, Karakatsanis and Wagner JJ.",
          "caseName": "IN THE SUPREME COURT OF BRITISH COLUMBIA",
          "court": "Supreme Court of British Columbia",
          "creators": Array [],
          "dateDecided": "2007-11-20",
          "type": "courtCase",
          "url": "https://www.bccourts.ca/Jdb-txt/SC/07/17/2007BCSC1700.pdf",
        },
        "id": "46",
        "tags": Array [],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /books when all of the resources are published should fetch multiple resources of type book 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "author": "John Doeburg",
        "id": "23",
        "publicationDate": "2002",
        "subtitle": "The wolf's revenge",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "title": "Three Little Pigs",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "author": "Jane Donnaldson",
        "id": "24",
        "publicationDate": "2011",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "title": "An Adventure Story",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "author": "Jane Donnaldson",
        "id": "25",
        "publicationDate": "2012",
        "tags": Array [],
        "title": "An Adventure Story II",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /books when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "author": "John Doeburg",
        "id": "23",
        "publicationDate": "2002",
        "subtitle": "The wolf's revenge",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "title": "Three Little Pigs",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "author": "Jane Donnaldson",
        "id": "24",
        "publicationDate": "2011",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "title": "An Adventure Story",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "author": "Jane Donnaldson",
        "id": "25",
        "publicationDate": "2012",
        "tags": Array [],
        "title": "An Adventure Story II",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /mediaItems when all of the resources are published should fetch multiple resources of type mediaItem 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributorAndRoles": Array [
          Object {
            "contributorId": "2",
            "role": "host",
          },
        ],
        "id": "1",
        "lengthMilliseconds": 2500,
        "mimeType": "audio/mpeg",
        "published": true,
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
        "title": "episode title (in language)",
        "titleEnglish": "Metal Mondays episode 1",
        "url": "https://www.metalmondays.com/1.mp3",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /mediaItems when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributorAndRoles": Array [
          Object {
            "contributorId": "2",
            "role": "host",
          },
        ],
        "id": "1",
        "lengthMilliseconds": 2500,
        "mimeType": "audio/mpeg",
        "published": true,
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
        "title": "episode title (in language)",
        "titleEnglish": "Metal Mondays episode 1",
        "url": "https://www.metalmondays.com/1.mp3",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /photographs when all of the resources are published should fetch multiple resources of type photograph 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "id": "0",
        "imageURL": "https://www.mysound.org/downloads/cat.png",
        "photographer": "Susie McRealart",
        "tags": Array [
          Object {
            "id": "3",
            "label": "placenames",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "id": "1",
        "imageURL": "https://www.mysound.org/downloads/dog.png",
        "photographer": "Robert McRealart",
        "tags": Array [
          Object {
            "id": "4",
            "label": "songs",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "id": "2",
        "imageURL": "https://www.mysound.org/downloads/wildflower.png",
        "photographer": "Kenny Tree-Huggens",
        "tags": Array [],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /photographs when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "id": "0",
        "imageURL": "https://www.mysound.org/downloads/cat.png",
        "photographer": "Susie McRealart",
        "tags": Array [
          Object {
            "id": "3",
            "label": "placenames",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "id": "1",
        "imageURL": "https://www.mysound.org/downloads/dog.png",
        "photographer": "Robert McRealart",
        "tags": Array [
          Object {
            "id": "4",
            "label": "songs",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "id": "2",
        "imageURL": "https://www.mysound.org/downloads/wildflower.png",
        "photographer": "Kenny Tree-Huggens",
        "tags": Array [],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /songs when all of the resources are published should fetch multiple resources of type song 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.myaudio.com/lamb.mp3",
        "contributions": Array [
          "1 (performer)",
        ],
        "id": "1",
        "lengthMilliseconds": 3500,
        "lyrics": "Mary had a little lamb, little lamb.",
        "startMilliseconds": 0,
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
        "title": "Song title in language",
        "titleEnglish": "Mary had a little lamb",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.myaudio.com/badsong.wav",
        "contributions": Array [
          "33 (author)",
        ],
        "id": "2",
        "lengthMilliseconds": 33000,
        "lyrics": "Ain't gonna see the light of day, light of day, light of day",
        "startMilliseconds": 0,
        "tags": Array [],
        "title": "Unpublished Song Title (lang)",
        "titleEnglish": "Unpublished Song Title (Engl)",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /songs when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.myaudio.com/lamb.mp3",
        "contributions": Array [
          "1 (performer)",
        ],
        "id": "1",
        "lengthMilliseconds": 3500,
        "lyrics": "Mary had a little lamb, little lamb.",
        "startMilliseconds": 0,
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
        "title": "Song title in language",
        "titleEnglish": "Mary had a little lamb",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.myaudio.com/badsong.wav",
        "contributions": Array [
          "33 (author)",
        ],
        "id": "2",
        "lengthMilliseconds": 33000,
        "lyrics": "Ain't gonna see the light of day, light of day, light of day",
        "startMilliseconds": 0,
        "tags": Array [],
        "title": "Unpublished Song Title (lang)",
        "titleEnglish": "Unpublished Song Title (Engl)",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /spatialFeatures when all of the resources are published should fetch multiple resources of type spatialFeature 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            100,
            0,
          ],
          "type": "Point",
        },
        "id": "100",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            20,
            10,
          ],
          "type": "Point",
        },
        "id": "101",
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            70.5,
            23.5,
          ],
          "type": "Point",
        },
        "id": "102",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              1,
              2,
            ],
            Array [
              1,
              3,
            ],
            Array [
              1.5,
              3.5,
            ],
            Array [
              3,
              4.2,
            ],
          ],
          "type": "LineString",
        },
        "id": "1",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              Array [
                1,
                3,
              ],
              Array [
                2,
                5,
              ],
              Array [
                1.5,
                3.7,
              ],
              Array [
                1.2,
                3.3,
              ],
              Array [
                1,
                3,
              ],
            ],
          ],
          "type": "Polygon",
        },
        "id": "300",
        "tags": Array [],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /spatialFeatures when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            100,
            0,
          ],
          "type": "Point",
        },
        "id": "100",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            20,
            10,
          ],
          "type": "Point",
        },
        "id": "101",
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            70.5,
            23.5,
          ],
          "type": "Point",
        },
        "id": "102",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              1,
              2,
            ],
            Array [
              1,
              3,
            ],
            Array [
              1.5,
              3.5,
            ],
            Array [
              3,
              4.2,
            ],
          ],
          "type": "LineString",
        },
        "id": "1",
        "tags": Array [],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              Array [
                1,
                3,
              ],
              Array [
                2,
                5,
              ],
              Array [
                1.5,
                3.7,
              ],
              Array [
                1.2,
                3.3,
              ],
              Array [
                1,
                3,
              ],
            ],
          ],
          "type": "Polygon",
        },
        "id": "300",
        "tags": Array [],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /terms when all of the resources are published should fetch multiple resources of type term 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributor": "",
        "id": "1",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "term": "Chil-term-1",
        "termEnglish": "Engl-term-1",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributor": "",
        "id": "2",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
        "term": "Chil-term-2",
        "termEnglish": "Engl-term-2",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributor": "",
        "id": "3",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
        "term": "Chil-term-no-english",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /terms when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributor": "",
        "id": "1",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "term": "Chil-term-1",
        "termEnglish": "Engl-term-1",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributor": "",
        "id": "2",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
        "term": "Chil-term-2",
        "termEnglish": "Engl-term-2",
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "contributor": "",
        "id": "3",
        "tags": Array [
          Object {
            "id": "2",
            "label": "animals",
          },
        ],
        "term": "Chil-term-no-english",
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /transcribedAudioItems when all of the resources are published should fetch multiple resources of type transcribedAudio 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.mysound.org/downloads/123.mp3.mp3",
        "id": "110",
        "length": 20000,
        "plainText": "
[12000] There once was a little wooden boy. [15550]
[18300] His name was Pinocchio. [19240]",
        "start": 0,
        "tags": Array [
          Object {
            "id": "3",
            "label": "placenames",
          },
        ],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /transcribedAudioItems when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "audioURL": "https://www.mysound.org/downloads/123.mp3.mp3",
        "id": "110",
        "length": 20000,
        "plainText": "
[12000] There once was a little wooden boy. [15550]
[18300] His name was Pinocchio. [19240]",
        "start": 0,
        "tags": Array [
          Object {
            "id": "3",
            "label": "placenames",
          },
        ],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /vocabularyLists when all of the resources are published should fetch multiple resources of type vocabularyList 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "entries": Array [
          Object {
            "term": Object {
              "contributor": "",
              "id": "1",
              "term": "Chil-term-1",
              "termEnglish": "Engl-term-1",
            },
            "variableValues": Object {
              "person": "11",
            },
          },
          Object {
            "term": Object {
              "contributor": "",
              "id": "2",
              "term": "Chil-term-2",
              "termEnglish": "Engl-term-2",
            },
            "variableValues": Object {
              "person": "21",
            },
          },
        ],
        "id": "1",
        "name": "test VL 1 chil",
        "nameEnglish": "test VL 1 engl",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "variables": Array [
          Object {
            "name": "person",
            "type": "dropbox",
            "validValues": Array [
              Object {
                "display": "I",
                "value": "11",
              },
              Object {
                "display": "We",
                "value": "21",
              },
            ],
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "entries": Array [
          Object {
            "term": Object {
              "contributor": "",
              "id": "2",
              "term": "Chil-term-2",
              "termEnglish": "Engl-term-2",
            },
            "variableValues": Object {
              "person": "23",
            },
          },
        ],
        "id": "2",
        "name": "test VL 2 CHIL- no engl name",
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
        "variables": Array [],
      },
    },
  ],
}
`;

exports[`When fetching multiple resources GET /vocabularyLists when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "actions": Array [],
  "data": Array [
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "entries": Array [],
        "id": "1",
        "name": "test VL 1 chil",
        "nameEnglish": "test VL 1 engl",
        "tags": Array [
          Object {
            "id": "1",
            "label": "plants",
          },
        ],
        "variables": Array [
          Object {
            "name": "person",
            "type": "dropbox",
            "validValues": Array [
              Object {
                "display": "I",
                "value": "11",
              },
              Object {
                "display": "We",
                "value": "21",
              },
            ],
          },
        ],
      },
    },
    Object {
      "actions": Array [
        Object {
          "description": "Allow a user to view (but not edit) a given resource",
          "label": "Grant Read Access to User",
          "schema": Object {
            "resourceCompositeIdentifier": Object {
              "isArray": false,
              "isOptional": false,
              "type": "COMPOSITE_IDENTIFIER",
            },
            "userId": Object {
              "isArray": false,
              "isOptional": false,
              "type": "UUID",
            },
          },
          "type": "GRANT_RESOURCE_READ_ACCESS_TO_USER",
        },
      ],
      "data": Object {
        "entries": Array [],
        "id": "2",
        "name": "test VL 2 CHIL- no engl name",
        "tags": Array [
          Object {
            "id": "5",
            "label": "legends",
          },
        ],
        "variables": Array [],
      },
    },
  ],
}
`;
